--- a/task/partials/task.html
+++ b/task/partials/task.html
@@ -22,23 +22,23 @@
 	<form ng-init="addNewClicked=false; " ng-if="addNewClicked" id="newTaskForm" class="add-task">
 	<div class="form-actions modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal_content">
-	<textarea class="modal_content-text" rows="5" name="comment" ng-model="taskInput" placeholder="Запись" ng-focus="addNewClicked"></textarea>
+	<textarea class="modal_content-text" rows="5" name="comment" id="comment" ng-model="taskInput" ng-focus="addNewClicked"></textarea>
 
 	<div class="modal_content-btn">
 	<button class="btn btn-md btn-danger add" data-dismiss="modal" aria-hidden="true" type="submit" ng-click="addTask(taskInput)"><i class="glyphicon glyphicon-plus"></i>&nbsp;Добавить</button>
 
 	<div class="styled-checkbox">
- 		 <input type="radio" name="radio" class="study" id="study"/>
+ 		 <input type="radio" name="type" class="study" id="study"/>
  		 <label for="study"><span>учеба</span></label>
   </div>
 
 	<div class="styled-checkbox">
- 		 <input type="radio" name="radio" class="work" id="work"/>
+ 		 <input type="radio" name="type" class="work" id="work"/>
  		 <label for="work"><span>работа</span></label>
   </div>
 
 	<div class="styled-checkbox">
-		 <input type="radio" name="radio" class="aims" id="aims"/>
+		 <input type="radio" name="type" class="aims" id="aims"/>
 		 <label for="aims"><span>цели</span></label>
 	</div>
 
@@ -60,6 +60,7 @@
 	<div class="task-content">
 	<p ng-class="{strike:task.STATUS==1}">{{task.TASK}}</p>
 	<p class="task-content__date">добавлено: {{task.CREATED_AT}}</p>
+	<p class="task-content__type">{{task.TYPE}}</p>
   </div>
 	<a ng-click="deleteTask(task.ID)" class="pull-right"><i class="glyphicon glyphicon-trash"></i></a>
     </label>
