--- a/task/css/styles.css
+++ b/task/css/styles.css
@@ -270,7 +270,13 @@ div.task label.checkbox {
 	max-height: 200px;
 	overflow-y: auto;
   display: flex;
-  justify-content: space-between;;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+div.task label.checkbox [title] {
+  border-radius:20px;
+  color: green;
 }
 
 div.task label.checkbox:nth-child(odd) {
@@ -317,13 +323,75 @@ div.task label.checkbox:nth-child(even) {
   margin-top: 6px;
 }
 
-.widget-body {
+.widget-body-in {
   margin-top: 15px;
   /*border-color: #000;
   margin-top: -10px;
   padding: 20px 10px;
   position: relative;
   height: 100%;*/
+}
+
+.widget-filter {
+  background-color: rgba(0,0,0,0.3);
+  margin-left: 20px;
+  padding: 20px 10px;
+}
+
+.widget-filter div {
+  background: #efefef;
+  margin: 10px 0;
+  padding: 5px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.widget-filter div:hover {
+  background: #d9534f;
+  color: white;
+}
+
+.widget-filter_item-title:hover {
+  background: #efefef !important;
+  color: inherit !important;
+  cursor: default;
+}
+
+.widget-filter div:active, .widget-filter div:focus {
+  background: #d43f3a;
+}
+
+.widget-filter_item {
+  position: relative;
+  font-size: 18px;
+}
+
+.study-filter:after {
+  font-family: FontAwesome;
+  content: "\f19d";
+  position: absolute;
+  right: 25px;
+}
+
+.work-filter:after {
+  font-family: FontAwesome;
+  content: "\f109";
+  position: absolute;
+  right: 25px;
+}
+
+.aims-filter:after {
+  font-family: FontAwesome;
+  content: "\f05b";
+  position: absolute;
+  right: 25px;
+}
+
+.other-filter:after {
+  font-family: FontAwesome;
+  content: "\f118";
+  position: absolute;
+  right: 25px;
 }
 
 .widget-box {
@@ -342,6 +410,8 @@ div.task label.checkbox:nth-child(even) {
 
 .strike {
   text-decoration: line-through;
+  background-color: rgba(0,0,0,0.1);
+  box-shadow: -9px 10px 18px 42px rgba(0,0,0,0.1);
 }
 
 .header-elements-margin {
@@ -393,6 +463,11 @@ div.task label.checkbox:nth-child(even) {
     .styled-input {
         width:100%;
     }
+
+    .widget-filter {
+      margin-left: 0;
+      margin-top: 20px;
+    }
 }
 
 .styled-input label {
@@ -438,6 +513,7 @@ button {
   width: 100%;
   height: 100%;
   outline: none;
+  overflow: hidden
 }
 
 .modal_content {
@@ -452,7 +528,7 @@ button {
   resize: none;
   border: 0 solid rgba(0,0,0,0.3);
   border-left-width: 1px;
-  padding: 9px 9px 9px 29px;
+  padding: 9px 9px 9px 15px;
   background-color: rgba(255, 255, 255, 0.9);
   position: relative;
   font-weight: 400;
@@ -503,18 +579,22 @@ input[type="radio"]:checked + label:before {
   background: #d2322d;
 }
 
+a.pull-right {
+  bottom: 5px;
+  position: absolute;
+}
+
 .task-right-pane {
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-right: 8px;
+  margin-right: 20px;
 }
 
 p.task-content__type {
   font-family: FontAwesome;
   position: absolute;
   font-size: 18px;
-  bottom: -9px
 }
 
 p[data-value='1']:after {
