--- a/task/css/styles.css
+++ b/task/css/styles.css
@@ -255,7 +255,7 @@ input[type="checkbox"] {
   /*flex-direction: row;
   justify-content: space-between;*/
   /*align-items: center;*/
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 div.task label.checkbox {
@@ -301,6 +301,7 @@ div.task label.checkbox:nth-child(even) {
   width: 100%;
   text-align: center;
   padding: 0 5px;
+  min-height: 50px;
 }
 
 .task-content-in {
@@ -351,6 +352,10 @@ div.task label.checkbox:nth-child(even) {
   color: white;
 }
 
+.widget-filter_item-title {
+  font-size: 18px;
+}
+
 .widget-filter_item-title:hover {
   background: #efefef !important;
   color: inherit !important;
@@ -370,28 +375,28 @@ div.task label.checkbox:nth-child(even) {
   font-family: FontAwesome;
   content: "\f19d";
   position: absolute;
-  right: 25px;
+  right: 2vw;
 }
 
 .work-filter:after {
   font-family: FontAwesome;
   content: "\f109";
   position: absolute;
-  right: 25px;
+  right: 2vw;
 }
 
 .aims-filter:after {
   font-family: FontAwesome;
   content: "\f05b";
   position: absolute;
-  right: 25px;
+  right: 2vw;
 }
 
 .other-filter:after {
   font-family: FontAwesome;
   content: "\f118";
   position: absolute;
-  right: 25px;
+  right: 2vw;
 }
 
 .widget-box {
@@ -468,6 +473,12 @@ div.task label.checkbox:nth-child(even) {
       margin-left: 0;
       margin-top: 20px;
     }
+
+   .widget-header {
+     display: flex;
+     flex-direction: column;
+   }
+
 }
 
 .styled-input label {
