--- a/task/css/styles.css
+++ b/task/css/styles.css
@@ -14,7 +14,7 @@ body {
   background-attachment: fixed;
   background-image:url(../img/back-img11.jpg);
   background-position: center;
-  padding-right: 0 !important;
+  padding: 25px 20px;
   /*overflow: hidden;*/
   /*background: #efefef;*/
 }
@@ -66,6 +66,7 @@ label.error {
   padding: 10px;
   text-align: justify;
   margin-bottom: 10px;
+  margin-right: 20px;
 }
 
 #welcome_index {
@@ -254,7 +255,7 @@ input[type="checkbox"] {
   /*flex-direction: row;
   justify-content: space-between;*/
   /*align-items: center;*/
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 div.task label.checkbox {
@@ -269,7 +270,13 @@ div.task label.checkbox {
 	max-height: 200px;
 	overflow-y: auto;
   display: flex;
-  justify-content: space-between;;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+div.task label.checkbox [title] {
+  border-radius:20px;
+  color: green;
 }
 
 div.task label.checkbox:nth-child(odd) {
@@ -287,12 +294,14 @@ div.task label.checkbox:nth-child(even) {
 
 .task-content p:first-child {
   font-size: 21px;
+  word-break: break-all;
 }
 
 .task-content {
   width: 100%;
   text-align: center;
   padding: 0 5px;
+  min-height: 50px;
 }
 
 .task-content-in {
@@ -315,13 +324,79 @@ div.task label.checkbox:nth-child(even) {
   margin-top: 6px;
 }
 
-.widget-body {
+.widget-body-in {
   margin-top: 15px;
   /*border-color: #000;
   margin-top: -10px;
   padding: 20px 10px;
   position: relative;
   height: 100%;*/
+}
+
+.widget-filter {
+  background-color: rgba(0,0,0,0.3);
+  margin-left: 20px;
+  padding: 20px 10px;
+}
+
+.widget-filter div {
+  background: #efefef;
+  margin: 10px 0;
+  padding: 5px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.widget-filter div:hover {
+  background: #d9534f;
+  color: white;
+}
+
+.widget-filter_item-title {
+  font-size: 18px;
+}
+
+.widget-filter_item-title:hover {
+  background: #efefef !important;
+  color: inherit !important;
+  cursor: default;
+}
+
+.widget-filter div:active, .widget-filter div:focus {
+  background: #d43f3a;
+}
+
+.widget-filter_item {
+  position: relative;
+  font-size: 18px;
+}
+
+.study-filter:after {
+  font-family: FontAwesome;
+  content: "\f19d";
+  position: absolute;
+  right: 2vw;
+}
+
+.work-filter:after {
+  font-family: FontAwesome;
+  content: "\f109";
+  position: absolute;
+  right: 2vw;
+}
+
+.aims-filter:after {
+  font-family: FontAwesome;
+  content: "\f05b";
+  position: absolute;
+  right: 2vw;
+}
+
+.other-filter:after {
+  font-family: FontAwesome;
+  content: "\f118";
+  position: absolute;
+  right: 2vw;
 }
 
 .widget-box {
@@ -340,6 +415,8 @@ div.task label.checkbox:nth-child(even) {
 
 .strike {
   text-decoration: line-through;
+  background-color: rgba(0,0,0,0.1);
+  box-shadow: -9px 10px 18px 42px rgba(0,0,0,0.1);
 }
 
 .header-elements-margin {
@@ -391,6 +468,17 @@ div.task label.checkbox:nth-child(even) {
     .styled-input {
         width:100%;
     }
+
+    .widget-filter {
+      margin-left: 0;
+      margin-top: 20px;
+    }
+
+   .widget-header {
+     display: flex;
+     flex-direction: column;
+   }
+
 }
 
 .styled-input label {
@@ -436,20 +524,22 @@ button {
   width: 100%;
   height: 100%;
   outline: none;
+  overflow: hidden
 }
 
 .modal_content {
-  width: 44%;
+  width: 45%;
   /*margin: 0 auto;*/
   position: fixed;
-  left: 28%;
+  left: 29%;
   top: 30%;
 }
 
 .modal_content-text {
+  resize: none;
   border: 0 solid rgba(0,0,0,0.3);
   border-left-width: 1px;
-  padding: 9px 9px 9px 29px;
+  padding: 9px 9px 9px 15px;
   background-color: rgba(255, 255, 255, 0.9);
   position: relative;
   font-weight: 400;
@@ -498,4 +588,59 @@ input[type="radio"]:hover + label:before {
 }
 input[type="radio"]:checked + label:before {
   background: #d2322d;
+}
+
+a.pull-right {
+  bottom: 5px;
+  position: absolute;
+}
+
+.task-right-pane {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+}
+
+p.task-content__type {
+  font-family: FontAwesome;
+  position: absolute;
+  font-size: 18px;
+}
+
+p[data-value='1']:after {
+  /*content: "\2665";
+  background-image: expression(this.runtimeStyle.backgroundImage="none",this.innerHTML = '<b>♥</b>'+this.innerHTML);*/
+  content: "\f19d";
+}
+
+p[data-value='2']:after {
+  content: "\f109";
+}
+
+p[data-value='3']:after {
+  content: "\f05b";
+}
+
+p[data-value='4']:after {
+  content: "\f118";
+}
+
+
+
+
+@media screen and (min-width: 1360px) {
+  .widget-header {
+    position: fixed;
+    z-index: 999;
+  }
+
+ .widget-header div {
+    padding: 0 23.5px;
+ }
+
+ .widget-body {
+     margin-top: 55px;
+ }
+
 }
