--- a/task/css/styles.css
+++ b/task/css/styles.css
@@ -320,6 +320,16 @@ div.task label.checkbox:nth-child(even) {
   justify-content: space-around;
 }
 
+.btn:focus,.btn:active {
+   outline: none !important;
+}
+
+.edit-task-btn {
+  position: absolute;
+  bottom: 15px;
+  left: 10px;
+}
+
 .filter {
   margin-top: 6px;
 }
@@ -339,36 +349,45 @@ div.task label.checkbox:nth-child(even) {
   padding: 20px 10px;
 }
 
-.widget-filter div {
+/*.widget-filter div {
   background: #efefef;
   margin: 10px 0;
   padding: 5px;
   text-align: center;
   cursor: pointer;
-}
-
+}*/
+/*
 .widget-filter div:hover {
   background: #d9534f;
   color: white;
-}
+}*/
 
 .widget-filter_item-title {
   font-size: 18px;
+  background: #efefef;
+  text-align: center;
+  margin-bottom: 5px;
 }
 
-.widget-filter_item-title:hover {
+/*.widget-filter_item-title:hover {
   background: #efefef !important;
   color: inherit !important;
   cursor: default;
-}
+}*/
 
-.widget-filter div:active, .widget-filter div:focus {
+/*.widget-filter div:active, .widget-filter div:focus {
   background: #d43f3a;
-}
+}*/
 
 .widget-filter_item {
+  margin: 5px 0;
+  width: 100%;
   position: relative;
   font-size: 18px;
+}
+
+.widget-filter button:last-child {
+  margin-bottom: 0;
 }
 
 .study-filter:after {
@@ -493,6 +512,13 @@ div.task label.checkbox:nth-child(even) {
     font-weight: normal;
 }
 
+.styled-input label.error
+ {
+   padding-left: 10rem;
+   font-size: 12px;
+   color: red;
+   margin-top: 4px;
+ }
 .styled-input.wide {
     width: 100%;
     max-width: 100%;
